# optparse-applicative

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  README.md  example.hs  hello.hs  hie.yaml  modes.hs  optparse-applicative.cabal  shell.nix  stack.yaml
.github/workflows/: haskell-ci.yml
Control/Alternative/: FreeND.hs  FreeStar.hs
Control/Applicative/Free/: Complement.hs
Data/: Monoid1.hs
Options/: Applicative.hs
Options/Applicative/: Arrows.hs  BashCompletion.hs  Builder.hs  Common.hs  Extra.hs  Help.hs  Internal.hs  Types.hs  Utils.hs
Options/Applicative/Builder/: Arguments.hs  Completer.hs  Internal.hs  TypeErrors.hs
Options/Applicative/Help/: Chunk.hs  Core.hs  Levenshtein.hs  Pretty.hs  Types.hs
docs/: arrows.md  bash-completion.md  disambiguation.md  index.md
nix/: build.nix  mkHaskellShell.nix  nixpkgs.pinned.nix
src/Control/Alternative/: FreeND.hs  FreeStar.hs
src/Control/Applicative/Free/: Complement.hs
src/Data/: Bimonoid.hs  Monoid1.hs
src/Data/Bimonoid/: Expr.hs  Free.hs
src/Options/: Applicative.hs
src/Options/Applicative/: Arrows.hs  BashCompletion.hs  Basic.hs  Builder.hs  Classes.hs  Common.hs  Error.hs  Extra.hs  Generic.hs  Internal.hs  Name.hs  NonEmpty.hs  Types.hs  Usage.hs  Validate.hs  WithArgs.hs
src/Options/Applicative/Builder/: Completer.hs  Internal.hs
src/Options/Applicative/Help/: Ann.hs  Chunk.hs  Core.hs  HelpDoc.hs  Levenshtein.hs  Pretty.hs  Style.hs  Types.hs
tests/: LICENSE  Tests.hs  cabal.err.txt  commands.err.txt  commands_header.err.txt  commands_header_full.err.txt  formatting-long-subcommand.err.txt  formatting.err.txt  generic_commands.err.txt  generic_simple.err.txt  hello.err.txt  hello.hs  long_equals.err.txt  modes.err.txt  modes.hs  nested.err.txt  nested_optional.err.txt  optparse-applicative-tests.cabal  parser_group_all_grouped.err.txt  parser_group_basic.err.txt  parser_group_command_groups.err.txt  parser_group_duplicate_command_groups.err.txt  parser_group_duplicates.err.txt  parser_group_nested.err.txt  test.hs
tests/Examples/: Alternatives.hs  Cabal.hs  Commands.hs  Deprecation.hs  Formatting.hs  Hello.hs  LongSub.hs
tests/Examples/Generic/: Commands.hs  Simple.hs
tests/Examples/ParserGroup/: AllGrouped.hs  Basic.hs  CommandGroups.hs  DuplicateCommandGroups.hs  Duplicates.hs  Nested.hs
